--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>{{ name }}'s Watchlist</title>
 </head>
 <body>
-    {% with messages = get_flashed_messages() %}
-         {% if messages %}
-               {% for message in messages %}
-                    <p>{{ message }}</p>
-               {% endfor %}
-         {% endif %}
-    {% endwith %}
-<h3>Welcome!</h3>
-<a href = "{{ url_for('login') }}">login</a>
+    <h2>{{ name }}'s Watchlist</h2>
+    {# 使用 length 过滤器获取 movies 变量的长度 #}
+    <p>{{ movies|length }} Titles</p>
+    <ul>
+        {% for movie in movies %}       {# 迭代 movies 变量 #}
+        <li>{{ movie.title }} - {{ movie.year }}</li>       {# 等同于 movie['title'] #}
+        {% endfor %}        {# 使用 endfor 标签结束 for 语句 #}
+    </ul>
+    <footer>
+        <small>&copy; 2021 <a href="http://helloflask.com/tutorial">HelloFlask</a></small>
+    </footer>
 </body>
 </html>
